--- a/resources/queries.properties
+++ b/resources/queries.properties
@@ -2,9 +2,9 @@
 
 
 instructors= SELECT concat(People.firstName, ' ', People.lastName) AS instructors FROM Facilitators INNER JOIN People ON People.peopleID = Facilitators.facilitatorID;
-topics= SELECT DISTINCT Classes.topicName FROM Classes INNER JOIN CurriculumClasses ON CurriculumClasses.classID = Classes.classID
-curricula= SELECT DISTINCT Curricula.curriculumName FROM Curricula INNER JOIN CurriculumClasses ON CurriculumClasses.curriculumID = Curricula.curriculumID
+topics= SELECT DISTINCT Classes.topicName AS topics FROM Classes INNER JOIN CurriculumClasses ON CurriculumClasses.classID = Classes.classID
+curricula= SELECT DISTINCT Curricula.curriculumName AS curricula FROM Curricula INNER JOIN CurriculumClasses ON CurriculumClasses.curriculumID = Curricula.curriculumID
 sexes= SELECT (unnest(enum_range(NULL::SEX))::text) AS sexes
 races= SELECT (unnest(enum_range(NULL::RACE))::text) AS races
-locations= SELECT unnest(enum_range(NULL::PROGRAMTYPE)) AS locations
+locations= SELECT Sites.siteName AS locations FROM Sites
 
