--- a/resources/sync.properties
+++ b/resources/sync.properties
@@ -1,7 +1,7 @@
-#Wed Dec 06 14:57:22 EST 2017
-locations=Choose,DC Jail,Jail Ladies New
+#Wed Dec 06 15:58:21 EST 2017
+locations=Choose,Candy..Mountain--where//food/is,//pancake,\\help,/pancake,\\here,Location 1
 sexes=Choose,Male,Female,Other
-curricula=Choose,Cornerstone,Nurturing Skills for Families - Men,Jail Ladies New,ITAP,Full Curriculum,Jail Men
+curricula=Choose,Nurturing Skills for Families - Women,Cornerstone,How--Bout+this..//cant//break /help/here \\help
 races=Choose,Caucasian,African American,Multi Racial,Latino,Pacific Islander,Native American,Other
-instructors=Choose,Chris Algozzine
-topics=Choose,Discipline - Appropriate Expectations,Helping Children Manage Behavior,Recap classes 10-17,Understanding & Handling Stress,Alternatives to Physical Punishment,Ages & Stages\: Appropriate Expectations,Children's Brain Development,Discipline -,Child Proofing Home/Safety Checklist/Safety Reminders,Problem Solving & Decision Making,Establishing Nurturing Parenting Routines,Emotional Honesty & Guilt/Shame,Using Rewards & Punishment to Guide/Teach Children/Praise,Understanding & Expressing Anger,Nurturing/Culture/Spirituality,Communication/ Listening/ Criticism/ Confrontation/ Fair Fighting,Recap classes 1-9,Relationships/Personal Space,Self Esteem/Self Worth,Communication,Attachment/Separation & Loss,Understanding Discipline/Developing Family Morals/Values/Rules,"Dads on Time-Out" - talking to children about incarceration,Ages & Stages\: Preschool to Adolescence,Male/Female Brain/Quiz,Improving Self-Worth/Children's Self Worth,Developing Personal Power Adults/Children,Discipline/Rewards/Punishment/Praise,Developing Empathy/Getting Needs Met,Self Esteem/Self Care - Hygiene,Guest Speaker,Keeping Children Safe/Child Abuse & Neglect,Anger Management,Feeding Young Children Nutritious Foods,Talking about Effects of Drugs/Alcohol/Smoking on Family,Discipline - Family Values, Rules, Morals,Discipline I & II,Ages & Stages\: Infants to Toddler,Recognizing & Understanding Feelings
+instructors=Choose,Chris Algozzine,Gwen Outlar Davis
+topics=Choose,Ages & Stages\: Appropriate Expectations,Ages & Stages\: Infants to Toddler,Communication,"Dads on Time-Out" - talking to children about incarceration,Understanding Discipline/Developing Family Morals/Values/Rules
