--- a/properties/sync.properties
+++ b/properties/sync.properties
@@ -1,7 +1,7 @@
-#Wed Dec 06 16:38:08 EST 2017
-locations=Choose,Candy..Mountain--where//food/is,//pancake,\\help,/pancake,\\here,Location 1
+#Wed Dec 13 15:56:34 EST 2017
+locations=Choose
 sexes=Choose,Male,Female,Other
-curricula=Choose,Nurturing Skills for Families - Women,Cornerstone,How--Bout+this..//cant//break /help/here \\help
+curricula=Choose
 races=Choose,Caucasian,African American,Multi Racial,Latino,Pacific Islander,Native American,Other
-instructors=Choose,Chris Algozzine,Gwen Outlar Davis
-topics=Choose,Ages & Stages\: Appropriate Expectations,Ages & Stages\: Infants to Toddler,Communication,"Dads on Time-Out" - talking to children about incarceration,Understanding Discipline/Developing Family Morals/Values/Rules
+instructors=Choose
+topics=Choose
